--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Pedras preciosas" />
+    <meta name="theme-color" content="#ffff" />
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="keywords" content="Turmalina, Ametista, Esmeralda, Jade, Rubi, Safira, Diamante, Opala, Água Marinha, Turquesa, Manganês, Ouro">
+    <meta name="author" content="Força Web">
+    <meta name="robots" content="index, follow"/>
+    <meta name="description" content="Pedras preciosas tais como Turmalina, Ametista, Esmeralda, Jade, Rubi, Safira, Diamante, Opala, Água Marinha, Turquesa, Manganês, Ouro" />
     <title>Potiguar Minerais</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
