--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
     <meta
       name="keywords"
-      content="Turmalina, Ametista, Esmeralda, Jade, Rubi, Safira, Diamante, Opala, Água Marinha, Turquesa, Manganês, Ouro"
+      content="Turmalina, Ametista, Esmeralda, Jade, Rubi, Safira, Diamante, Opala, Água Marinha, Turquesa, Manganês, Ouro, exportacao, minerios, mineracao, pedras preciosas, pedras para decoracao"
     />
     <meta name="author" content="Força Web" />
     <meta name="robots" content="index, follow" />
@@ -16,7 +16,7 @@
       name="description"
       content="Pedras preciosas tais como Turmalina, Ametista, Esmeralda, Jade, Rubi, Safira, Diamante, Opala, Água Marinha, Turquesa, Manganês, Ouro"
     />
-    <title>Potiguar Minerais</title>
+    <title>Potiguar Minerais - Exportação de minérios para todo o Brasil</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
